--- a/studentsInfoWithLoc/Base.lproj/Main.storyboard
+++ b/studentsInfoWithLoc/Base.lproj/Main.storyboard
@@ -174,6 +174,7 @@
                         <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor"/>
                     </view>
                     <connections>
+                        <outlet property="addUpdateButton" destination="UF6-Ya-qrd" id="gnG-YZ-Vxm"/>
                         <outlet property="detailsValue" destination="KWy-86-pJN" id="cQX-yG-95g"/>
                         <outlet property="periorityValue" destination="C7p-HW-0zP" id="cfN-9y-gOW"/>
                         <outlet property="statusValue" destination="rNJ-dt-JkQ" id="9tn-Fg-RHo"/>
